Adding audience support

--- a/configs/scitokens.cfg
+++ b/configs/scitokens.cfg
@@ -2,6 +2,9 @@
 # This is a sample configuration file containing different
 # SciTokens issuer setups
 
+[Global]
+audience = https://testserver.example.com/
+
 [Issuer OSG-Connect]
 
 issuer = https://scitokens.org/osg-connect
