--- a/configs/scitokens.cfg
+++ b/configs/scitokens.cfg
@@ -2,8 +2,17 @@
 # This is a sample configuration file containing different
 # SciTokens issuer setups
 
-[Global]
-audience = https://testserver.example.com/
+# Global section is optional
+# Possible options are:
+# - audience: A comma separated list of acceptable audiences
+#[Global]
+#audience = https://testserver.example.com/
+
+# If the audience has commas in it, or if the audience has other special characters,
+# you can use audience_json, which is a json representation of the acceptable audience(s)
+#audience_json = [ "this,is,a,single,audience", "it can even have spaces" ]
+#audience_json = "single,audience,with,commas,and:"
+
 
 [Issuer OSG-Connect]
 
