Add an example for multiple audiences.

--- a/configs/scitokens.cfg
+++ b/configs/scitokens.cfg
@@ -6,7 +6,7 @@
 # Possible options are:
 # - audience: A comma separated list of acceptable audiences
 #[Global]
-#audience = https://testserver.example.com/
+#audience = https://testserver.example.com/, MySite
 
 # If the audience has commas in it, or if the audience has other special characters,
 # you can use audience_json, which is a json representation of the acceptable audience(s)
