--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
 [submodule "inih"]
-	path = inih
+	path = vendor/inih
 	url = https://github.com/jtilly/inih.git
+        branch = master
+[submodule "picojson"]
+	path = vendor/picojson
+	url = https://github.com/kazuho/picojson.git
+	branch = master
